--- a/src/Kooco.Pikachu.Blazor/_Imports.razor
+++ b/src/Kooco.Pikachu.Blazor/_Imports.razor
@@ -22,3 +22,4 @@
 @using Kooco.Pikachu.Blazor.Pages.Components
 @using Kooco.Pikachu.Permissions
 @using Kooco.Pikachu.TenantManagement
+@using Kooco.Pikachu.Blazor.Components.Messages
