--- a/src/Kooco.Pikachu.Blazor/Pages/Campaigns/Campaigns.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Campaigns/Campaigns.razor
@@ -1,10 +1,17 @@
 ﻿@page "/Campaigns"
 @using Kooco.Pikachu.Blazor.Pages.Components.Icons
 @using Kooco.Pikachu.Campaigns
+@using Volo.Abp.AspNetCore.Components.Messages
 @inherits PikachuComponentBase
 @inject ICampaignAppService CampaignAppService
 @inject NavigationManager NavigationManager
-
+@inject IUiMessageService UiMessageService
+<style>
+    svg.icon {
+        font-size: 12px;
+        color: lightgrey;
+    }
+</style>
 <Row>
     <Column ColumnSize="ColumnSize.Is12.Is6.OnTablet">
         <h3 class="text-dark">@L["Campaigns"]</h3>
@@ -17,6 +24,42 @@
                 @L["NewCampaign"]
             </PikachuButton>
         }
+    </Column>
+</Row>
+<Row Class="rounded-cards">
+    <Column ColumnSize="ColumnSize.Is6">
+        <Card>
+            <CardBody>
+                <Div Class="d-flex w-100 align-items-center justify-content-between">
+                    <Div>
+                        @L["TotalCampaigns"]
+                        <h3 class="m-0 mt-1">@TotalCount</h3>
+                    </Div>
+                    <Div Class="promotion-module-svg">
+                        <Div Class="bg-green">
+                            <i class="fas fa-arrow-trend-up fa-2x"></i>
+                        </Div>
+                    </Div>
+                </Div>
+            </CardBody>
+        </Card>
+    </Column>
+    <Column ColumnSize="ColumnSize.Is6">
+        <Card>
+            <CardBody>
+                <Div Class="d-flex w-100 align-items-center justify-content-between">
+                    <Div>
+                        @L["ActiveCampaigns"]
+                        <h3 class="m-0 mt-1">@ActiveCount</h3>
+                    </Div>
+                    <Div Class="promotion-module-svg">
+                        <Div Class="bg-purple">
+                            <i class="fas fa-calendar fa-2x"></i>
+                        </Div>
+                    </Div>
+                </Div>
+            </CardBody>
+        </Card>
     </Column>
 </Row>
 <Card>
@@ -57,8 +100,8 @@
                     <Label>@L["EndDate"]</Label>
                     <AntDesign.DatePicker TValue="DateTime?" Picker="AntDesign.DatePickerType.Date" @bind-Value="Filters.EndDate" />
                 </Column>
-                <Column ColumnSize="ColumnSize.Is12">
-                    <Div Class="d-flex justify-content-end gap-1 w-100">
+                <Column ColumnSize="ColumnSize.Is3">
+                    <Div Class="d-flex h-100 gap-1 w-100 align-items-end">
                         <Button Class="btn-sm btn-outline-primary" Clicked="ResetFilters">
                             <Icon Name="IconName.Undo"></Icon>
                             @L["Reset"]
@@ -181,3 +224,4 @@
         </DataGrid>
     </CardBody>
 </Card>
+<ConfirmDialog />
