Commit For Pk-1424 and 1433

--- a/src/Kooco.Pikachu.Blazor/Components/Messages/MyUiMessageAlert.razor
+++ b/src/Kooco.Pikachu.Blazor/Components/Messages/MyUiMessageAlert.razor
@@ -84,7 +84,7 @@
 @if(IsConfirmation)
 {
     <Modal @ref="@ModalRef" Closing="@OnModalClosing">
-    <ModalContent Class="custom-modal-content" Centered="@CenterMessage" Size="ModalSize.Large">
+    <ModalContent Class="custom-modal-content" Centered="@CenterMessage" >
 
         @if (IsConfirmation)
         {
