--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1594,19 +1594,19 @@
                                                                 <Label>@L["Title"] <Span Class="text-danger">*</Span></Label>
                                                             </Div>
                                                             <Div Class="col-12 pb-1">
-                                                                <TextEdit @bind-Text="productModule.Title" />
+                                                                <TinyMCEEditor @bind-Value="@productModule.Title" Style="min-height: 500px;" />
                                                             </Div>
                                                             <Div Class="col-2 pb-1">
                                                                 <Label>@L["SubTitle"] <Span Class="text-danger">*</Span></Label>
                                                             </Div>
                                                             <Div Class="col-12 pb-1">
-                                                                <TextEdit @bind-Text="@productModule.SubTitle" />
+                                                                <TinyMCEEditor @bind-Value="@productModule.SubTitle" Style="min-height: 500px;" />
                                                             </Div>
                                                             <Div Class="col-2 pb-1">
                                                                 <Label>@L["BodyText"]</Label>
                                                             </Div>
                                                             <Div Class="col-12 pb-1">
-                                                                <TextEdit @bind-Text="@productModule.Content" />
+                                                                <TinyMCEEditor @bind-Value="@productModule.Content" Style="min-height: 500px;" />
                                                             </Div>
                                                         </Div>
                                                     </Div>
