#PK-1333 Shop cart UI

--- a/src/Kooco.Pikachu.Blazor/Components/Messages/MyUiMessageAlert.razor
+++ b/src/Kooco.Pikachu.Blazor/Components/Messages/MyUiMessageAlert.razor
@@ -25,7 +25,7 @@
 }
 
 /* Icon centered in red header */
-.icon {
+.custom-popup-icon {
   font-size: 50px;
   color: #FFFFFF;
 }
@@ -90,7 +90,7 @@
         {
             <!-- Red warning header with icon -->
             <ModalHeader Class="rectangle d-flex justify-content-center align-items-center">
-                <Icon Name="IconName.ExclamationTriangle" Class="icon" />
+                    <Icon Name="IconName.ExclamationTriangle" Class="custom-popup-icon" />
             </ModalHeader>
         }
 
