Commit For Pk-1463

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1468,11 +1468,7 @@
                                                                 HighlightSearch
                                                                 Immediate="true"
                                                                 SelectedValue="selectedItem.Id"
-                                                                SelectedValueChanged="(id) => OnSelectedValueChanged(selectedItem.Item is not null && selectedItem.Item.Id != Guid.Empty ?
-                                                                                                                                   selectedItem.Item.Id :
-                                                                                                                                   id,
-                                                                                                                                   productModule,
-                                                                                                                                   selectedItem)">
+                                                                SelectedValueChanged="(id) => OnSelectedValueChanged(id,productModule,selectedItem)">
                                                                     <NotFoundContent> @L["NotFound"] </NotFoundContent>
                                                                 </Autocomplete>
                                                             </div>
