--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -2181,6 +2181,38 @@
         </ModalFooter>
     </ModalContent>
 </Modal>
+@* Carousel Modal  *@
+<Modal @ref="CarouselCropperModal">
+    <ModalContent Size="ModalSize.Large">
+        <ModalHeader>
+            <ModalTitle>@L["CarouselCropper"]</ModalTitle>
+            <CloseButton Clicked="@CloseCropModal" />
+        </ModalHeader>
+        <ModalBody>
+            <Row>
+                <Column ColumnSize="ColumnSize.Is6">
+                    <Cropper @ref="CarouselCropper"
+                             Source="@imageToCrop"
+                             Style="aspect-ratio: 16 / 9;"
+                             SelectionChanged="@OnSelectionChanged"
+                             ShowBackground="true" />
+                </Column>
+                <Column ColumnSize="ColumnSize.Is6">
+                    <Div Margin="Margin.Is2.FromBottom">
+                        <Button Color="Color.Primary" Clicked="@GetCarouselCroppedImage" Disabled="@cropButtonDisabled">Get Cropped Image</Button>
+                        <Button Color="Color.Secondary" Clicked="@ResetCarouselSelection" Disabled="@cropButtonDisabled">Reset Selection</Button>
+                    </Div>
+                    <Image Source="@croppedImage" Border="Border.Is1" Style="width: 300px; height: 300px;" />
+                </Column>
+            </Row>
+        </ModalBody>
+        <ModalFooter>
+            <Button Color="Color.Secondary" Clicked="@CloseCropModal">@L["Cancel"]</Button>
+            <Button Color="Color.Primary"  Clicked="() => CropImageAsync(uploadedCarouselImages, CarouselModuleNumber, CarouselPicker, ImageType)">@L["Save"]</Button>
+        </ModalFooter>
+    </ModalContent>
+</Modal>
+
 <ConfirmDialog />
 @code {
 
